[gd_scene load_steps=4 format=3 uid="uid://ct00vev667agj"]

[ext_resource type="Texture2D" uid="uid://b3jwtdvx08euw" path="res://assets/inventorySlot.png" id="1_e0xh0"]
[ext_resource type="Script" path="res://gui/inventory_slot.gd" id="1_n5qlg"]
[ext_resource type="PackedScene" uid="uid://4bm60hweuhnx" path="res://gui/inventory_cell.tscn" id="3_vfmth"]

[node name="InventorySlot" type="PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(48, 48)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n5qlg")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Backgorund" type="Sprite2D" parent="CenterContainer"]
unique_name_in_owner = true
position = Vector2(-4.76837e-07, 4.76837e-07)
scale = Vector2(2.4, 2.4)
texture = ExtResource("1_e0xh0")
vframes = 2

[node name="InventoryCell" parent="." instance=ExtResource("3_vfmth")]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
